Removed some files

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app",
+  "name": "yeriaddict-portfolio",
   "version": "0.1.0",
   "homepage": "https://yeriaddict.github.io",
   "private": true,
