--- a/package.json
+++ b/package.json
@@ -48,9 +48,9 @@
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-unused-imports": "4.1.4",
 		"postcss": "8.4.38",
+		"prettier": "3.3.3",
 		"tailwind-variants": "0.1.20",
 		"tailwindcss": "3.4.3",
-		"typescript": "5.6.3",
-		"prettier": "3.3.3"
+		"typescript": "5.6.3"
 	}
 }
