--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
 		"next-themes": "^0.2.1",
 		"react": "18.3.1",
 		"react-chrono": "^2.6.1",
-		"react-dom": "18.3.1"
+		"react-dom": "18.3.1",
+		"swiper": "^11.1.14"
 	},
 	"devDependencies": {
 		"@types/node": "20.5.7",
