--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"react": "18.3.1",
 		"react-chrono": "^2.6.1",
 		"react-dom": "18.3.1",
+		"react-typed": "^2.0.12",
 		"swiper": "^11.1.14"
 	},
 	"devDependencies": {
