--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
 		"lint": "eslint . --ext .ts,.tsx -c .eslintrc.json --fix"
 	},
 	"dependencies": {
+		"@nextui-org/accordion": "^2.0.40",
 		"@nextui-org/button": "2.0.38",
 		"@nextui-org/card": "^2.0.34",
+		"@nextui-org/chip": "^2.0.33",
 		"@nextui-org/code": "2.0.33",
 		"@nextui-org/divider": "^2.0.32",
 		"@nextui-org/image": "^2.0.32",
@@ -23,6 +25,7 @@
 		"@nextui-org/spacer": "^2.0.33",
 		"@nextui-org/switch": "2.0.34",
 		"@nextui-org/system": "2.2.6",
+		"@nextui-org/tabs": "^2.0.37",
 		"@nextui-org/theme": "2.2.11",
 		"@react-aria/ssr": "3.9.4",
 		"@react-aria/visually-hidden": "3.8.12",
