--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"@nextui-org/accordion": "^2.0.40",
 		"@nextui-org/button": "2.0.38",
 		"@nextui-org/card": "^2.0.34",
+		"@nextui-org/checkbox": "^2.1.5",
 		"@nextui-org/chip": "^2.0.33",
 		"@nextui-org/code": "2.0.33",
 		"@nextui-org/divider": "^2.0.32",
@@ -20,6 +21,7 @@
 		"@nextui-org/kbd": "2.0.34",
 		"@nextui-org/link": "2.0.35",
 		"@nextui-org/listbox": "2.1.27",
+		"@nextui-org/modal": "^2.0.41",
 		"@nextui-org/navbar": "2.0.37",
 		"@nextui-org/snippet": "2.0.43",
 		"@nextui-org/spacer": "^2.0.33",
